Fix Issue : screen jumping at modal opening

--- a/src/stylesheet/_layout.scss
+++ b/src/stylesheet/_layout.scss
@@ -42,3 +42,7 @@
     background-color: rgba(#fff, 0.3);
   }
 }
+
+.uploadcare--page {
+  height: 100%;
+}
